# ADCTMEnv

./: .env  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_tests.py  sample_run.py  validate-submission.sh
analysis/: __init__.py  policy_analyzer.py  trend_predictor.py
config/: __init__.py  constants.py
core/: __init__.py  dashboard_state.py  env.py  models.py  paths.py  simulator.py  state.py
docs/: ADCTM_Project_Summary.md  render_project_summary_pdf.py
dynamics/: thermal_model.py
grader/: evaluator.py  metrics.py
inference/: __init__.py
llm_inference/: __init__.py  main_inference.py  parser.py  prompt.py
reward/: reward_fn.py
server/: ADCTMEnv_environment.py  Dockerfile  __init__.py  app.py
tasks/: easy.json  hard.json  medium.json  task_config.py
tests/: __init__.py  conftest.py  run_all_modules.py  test_app_entry.py  test_baseline_contract.py  test_config_constants.py  test_submission_readiness.py
tests/analysis/: __init__.py  test_policy_analyzer.py  test_trend_predictor.py
tests/core/: __init__.py  test_models.py  test_simulator.py
tests/dynamics/: __init__.py  test_thermal_model.py
tests/grader/: __init__.py  test_evaluator.py  test_metrics.py
tests/inference/: __init__.py  test_parser.py  test_prompt.py
ui/: dashboard.py
utils/: TEST_PLAN.md  demo_cli.py  diagnose_llm.py  evaluation_report.json  models.py  run_all_tests.ps1  run_server_tests.ps1  run_submission_check.py  run_tests.py  submission.py  test_server_endpoints.py
(+16 files in other folders)
