[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-zone-cooling"
version = "1.0.0"
description = "A real-world simulation of data center cooling. Agent controls multi-zone cooling power based on thermal dynamics, workload profiles, and ambient temperatures."
authors = [
    { name = "OpenEnv Team" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.112.0",
    "uvicorn[standard]==0.30.1",
    "pydantic>=2.0.0",
    "numpy>=2.0.0",
    "openai",
    "requests==2.32.3",
    "openenv",
    "python-dotenv",
    "rich"
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/OpenEnv-Team/ADCTM"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "config*", "core*", "dynamics*", "grader*", "inference*", "reward*", "server*", "tasks*", "ui*"]
